@startuml MonsiteWebModel

Article *-- Photo
Article *-- Language
Article --o Language

class Article {

    - id : int
    - title : String 
    - description : String
    - url : String
    - photo : List<Photo>
    - langages : List<Language>

    + Article()
    + getId() : int
    + getTitle() : String
    + setTitle(String title) : void
    + getDescription() : String
    + setDescription(String description) : void
    + getUrl() : String
    + setUrl(String url) : void
    + getPhoto() : List<Photo>
    + addPhoto(Photo photo) : void
    + getLanguages() : List<Photo>
    + addLanguages(Language langage) : void
}



class Photo {
    - id : int
    - url : String
    - legend : String

    + Photo()
    + getId() : int
    + getUrl() : String
    + setUrl(String url)
    + getLegend() : String
    + setLegend(String legend)
}

class Language {
    -id : int
    -name : String
    -image : String
    -articles : List<Article>

    + getId() : int
    +getName() :String
    +setName(String name) :void
    +getImage() : String
    +setImage(String url) : void
    + getArticles() : List<Article>
    + addArticles(Article article) : void
}

@enduml